// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for June's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "F*^o9S3d7ov35",
  "messageId": "F*^o9S3d7ov35",
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "F*^o9S3d7ov35",
  },
  "userId": "F*^o9S3d7ov35",
}
`;

exports[`Testing snapshot for June's identify destination action: required fields 1`] = `
Object {
  "messageId": "F*^o9S3d7ov35",
  "timestamp": Any<String>,
}
`;
